--- a/Código/ShapeTP/nbproject/private/private.properties
+++ b/Código/ShapeTP/nbproject/private/private.properties
@@ -1,4 +1,5 @@
-deploy.ant.properties.file=C:\\Users\\denis\\AppData\\Roaming\\NetBeans\\11.2\\tomcat80.properties
-j2ee.server.home=D:/apache-tomcat-8.5.58
-j2ee.server.instance=tomcat80:home=D:\\apache-tomcat-8.5.58
-user.properties.file=C:\\Users\\denis\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+deploy.ant.properties.file=C:\\Users\\wesle\\AppData\\Roaming\\NetBeans\\12.0\\tomcat90.properties
+j2ee.server.home=C:/Users/wesle/Desktop/apache-tomcat-9.0.37
+j2ee.server.instance=tomcat90:home=C:\\Users\\wesle\\Desktop\\apache-tomcat-9.0.37
+selected.browser=Chrome.INTEGRATED
+user.properties.file=C:\\Users\\wesle\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
